--- a/SocialNetwork/Service/packages.config
+++ b/SocialNetwork/Service/packages.config
@@ -6,6 +6,8 @@
   <package id="MongoDB.Driver" version="2.10.2" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.10.2" targetFramework="net461" />
   <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net461" />
+  <package id="Neo4j.Driver.Signed" version="1.7.0" targetFramework="net461" />
+  <package id="Neo4jClient" version="3.1.0.6" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="SharpCompress" version="0.23.0" targetFramework="net461" />
   <package id="Snappy.NET" version="1.1.1.8" targetFramework="net461" />
